# llm-wiki-test

./: .gitignore  AGENTS.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
docs/: AI知识库MVP产品设计.md  AI知识库技术架构文档.md  AI知识库技术细节待确认清单.md
docs/engineering/: AI知识库技术架构文档.md  AI知识库技术细节待确认清单.md  项目说明与使用指南.md
docs/product/: AI知识库MVP产品设计.md  当前功能.md
docs/superpowers/archive/: findings.md  (+2 more)
indexes/: tags.md
kb/: __init__.py
kb/adapters/: web.py
kb/cli/: main.py
kb/config/: loader.py
kb/core/: errors.py  locks.py  models.py  scoring.py
kb/services/: brief_service.py  ingest_service.py  relation_service.py  topic_service.py
kb/storage/: generation_store.py  index_store.py  job_store.py  note_store.py
knowledge/: AGENTS.md  kb.yaml
knowledge/briefs/: topic-picks-20260716.md  weekly-2026-W29.md
knowledge/docs/: 智能体使用协议.md
knowledge/indexes/: insights.md  recent.md  sources.md  tags.md  topics.md
knowledge/logs/: history.md
knowledge/prompts/: answer.md  brief-topics.md  brief-weekly.md  lint.md  topic.md
knowledge/reports/: lint-20260716173100.md
knowledge/wiki/: insight-20260716-784562d1.md  topic-ai-knowledge-base.md
prompts/: note.md
raw/20260618/: cnt_20260618_5ae8aede.meta.yaml
tests/: conftest.py  test_ask_flow.py  test_ask_scoring.py  test_atomic.py  test_brief_flow.py  test_config.py  test_generation_schema.py  test_ids.py  test_ingest_flow.py  test_init_command.py  test_lint_flow.py  test_llm_wiki_e2e.py  test_relation_service.py  test_status_command.py  test_topic_compile_flow.py  test_topic_request_flow.py
(+69 files in other folders)
