[project]
name = "fuxi-kb"
version = "0.1.0"
description = "Local AI knowledge base CLI"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "python-frontmatter>=1.1.0",
  "pyyaml>=6.0.0",
  "httpx>=0.27.0",
  "trafilatura>=1.9.0",
  "pymupdf>=1.24.0",
]

[project.scripts]
kb = "kb.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kb"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
